--- a/services/producto/infrastructure/driven-adapters/jpa-repository/build.gradle
+++ b/services/producto/infrastructure/driven-adapters/jpa-repository/build.gradle
@@ -5,6 +5,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.reactivecommons.utils:object-mapper-api:0.1.0'
 
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.18.2'
+
+
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
 }
