--- a/services/producto/applications/app-service/src/main/resources/application.yaml
+++ b/services/producto/applications/app-service/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-server:
-  port: 8080
-
 spring:
   application:
     name: "productos"
@@ -8,14 +5,27 @@ spring:
     add-properties: false
   profiles:
     include: null
-  datasource:
-    url: "jdbc:postgresql://localhost:5432/productos_db"
+
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5432/productos_db
     username: root
     password: root
-    driverClassName: "org.postgresql.Driver"
-  jpa:
-    databasePlatform: "org.hibernate.dialect.PostgreSQLDialect"
-    hibernate:
-      ddl-auto: create-drop
+
+adapters:
+   r2dbc:
+     host: localhost
+     port: 5432
+     database: productos_db
+     schema: public
+     username: root
+     password: root
+
+logging:
+  level:
+    org:
+      springframework:
+        r2dbc: DEBUG
+
+
 cors:
   allowed-origins: "http://localhost:4200,http://localhost:8083, http://localhost:8080"
