--- a/services/producto/applications/app-service/src/main/resources/application.yaml
+++ b/services/producto/applications/app-service/src/main/resources/application.yaml
@@ -28,4 +28,4 @@ logging:
 
 
 cors:
-  allowed-origins: "http://localhost:4200,http://localhost:8083, http://localhost:8080"
+  allowed-origins: "http://localhost:4200,http://localhost:8083,http://localhost:8080,http://localhost:5173"
