--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,37 @@ services:
     networks:
       - microservicios-ecommerce-net
     restart: unless-stopped
+
+  mongodb:
+    image: mongo
+    container_name: mongo_db
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb:/data
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+    networks:
+      - microservicios-ecommerce-net
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo_express
+    restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+    networks:
+      - microservicios-ecommerce-net
+
 networks:
   microservicios-ecommerce-net:
     driver: bridge
 
 volumes:
   postgres:
-
+  mongodb:
