actualizar modelo producto

--- a/services/producto/applications/app-service/src/main/resources/application.yaml
+++ b/services/producto/applications/app-service/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ adapters:
    r2dbc:
      host: localhost
      port: 5432
-     database: productos_db
+     database: productos_db_dev
      schema: public
      username: root
      password: root
