--- a/services/customer/applications/app-service/src/main/resources/application.yaml
+++ b/services/customer/applications/app-service/src/main/resources/application.yaml
@@ -24,4 +24,4 @@ management:
       probes:
         enabled: true
 cors:
-  allowed-origins: "http://localhost:4200,http://localhost:8080"
+  allowed-origins: "http://localhost:4200,http://localhost:8080 /http://localhost:8888"
