--- a/services/producto/applications/app-service/build.gradle
+++ b/services/producto/applications/app-service/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'org.springframework.boot'
 
+ext {
+    springCloudVersion = "2024.0.0"
+}
+
 dependencies {
 	implementation project(':r2dbc-postgresql')
 	implementation project(':reactive-web')
@@ -7,9 +11,11 @@ dependencies {
     implementation project(':model')
     implementation project(':usecase')
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation 'com.tngtech.archunit:archunit:1.3.0'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+
 
 }
 
@@ -26,4 +32,10 @@ jar {
 bootJar {
     // Sets output jar name
     archiveFileName = "${project.getParent().getName()}.${archiveExtension.get()}"
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+    }
 }
