--- a/services/order/applications/app-service/build.gradle
+++ b/services/order/applications/app-service/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'org.springframework.boot'
+ext {
+    springCloudVersion = "2024.0.0"
+}
 
 dependencies {
 	implementation project(':reactive-web')
@@ -9,6 +12,7 @@ dependencies {
     implementation project(':model')
     implementation project(':usecase')
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation 'com.tngtech.archunit:archunit:1.3.0'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
@@ -27,4 +31,9 @@ jar {
 bootJar {
     // Sets output jar name
     archiveFileName = "${project.getParent().getName()}.${archiveExtension.get()}"
+}
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+    }
 }
