--- a/services/producto/applications/app-service/src/main/resources/application.yaml
+++ b/services/producto/applications/app-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: "productos"
+    name: product-service
   devtools:
     add-properties: false
   profiles:
@@ -25,7 +25,9 @@ logging:
     org:
       springframework:
         r2dbc: DEBUG
-
+eureka:
+  instance:
+    preferIpAddress: true
 
 cors:
   allowed-origins: "http://localhost:4200,http://localhost:8083,http://localhost:8080,http://localhost:5173"
