Servicio order funcionando, trae customer y productos, resta implementar logica

--- a/services/gateway/src/main/resources/application.yml
+++ b/services/gateway/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         - id: customer-service
           uri: lb://customer-service
           predicates:
-            - Path=/api/v1/customer
+            - Path=/api/v1/customer/**
 
   application:
     name: gateway
