--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,53 @@ services:
       - ME_CONFIG_MONGODB_SERVER=mongodb
     networks:
       - microservicios-ecommerce-net
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeper_ecommerce
+    environment:
+      #just for local
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 22181:2181
+    networks:
+      - microservicios-ecommerce-net
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka_ms_uptc
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+    networks:
+      - microservicios-ecommerce-net
+
+  mail-dev:
+    container_name: mail-dev-ecommerce
+    image: maildev/maildev
+    ports:
+      - 1080:1080
+      - 1025:1025
+
+
+
+
+  zipkin:
+    container_name: zipkin_ecommerce
+    image: openzipkin/zipkin
+    ports:
+      - 9411:9411
+    networks:
+      - microservicios-ecommerce-net
 
 networks:
   microservicios-ecommerce-net:
