--- a/services/config/src/main/resources/configurations/notification-service.yml
+++ b/services/config/src/main/resources/configurations/notification-service.yml
@@ -18,7 +18,7 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: '*'
-        spring.json.type.mapping: orderConfirmation:co.edu.uptc.kafka.order.OrderConfirmation,paymentConfirmation:co.edu.uptc.kafka.payment.PaymentConfirmation
+        spring.json.type.mapping: orderConfirmation:co.edu.uptc.model.order.OrderConfirmation,paymentConfirmation:co.edu.uptc.kafka.payment.PaymentConfirmation
   mail:
     host: localhost
     port: 1025
