--- a/services/order/applications/app-service/build.gradle
+++ b/services/order/applications/app-service/build.gradle
@@ -4,6 +4,8 @@ ext {
 }
 
 dependencies {
+	implementation project(':kafka')
+	implementation project(':kafka-consumer')
 	implementation project(':reactive-web')
 	implementation 'org.reactivecommons.utils:object-mapper:0.1.0'
 	implementation project(':mongo-repository')
